Smoll ass commit

--- a/Projeto/public/www/index.html
+++ b/Projeto/public/www/index.html
@@ -26,12 +26,12 @@
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
             </div>
         </nav>
-        <div class="content" style="text-align:center; padding: 100px;">
+        <div class="content" style="text-align:center; padding: 10%;">
             <header>
                 <div id="home" class="w3-justify w3-padding-64">
                     <center>
                         <h1><b>Monkey Business</b></h1>
-                        <img src="images/monkeylogo.png" style="max-width:400px; height:auto;">
+                        <img src="images/monkeylogo.png" style="max-width:100%; height:auto;">
                     </center>
                 </div>
             </header>
@@ -62,7 +62,7 @@
                 </center>
                 <br>
                 <div class="row">
-                    <img src="images/bananaphonegif2.gif" alt="bananaphone" height="350px">
+                    <img src="images/bananaphonegif2.gif" alt="bananaphone" height="max-width:50%; height:auto;">
                     <div class="columnright imagebox2">
                         <h4><b>Reparação e Formatação</b></h4>
                         <p>Os preços de reparações variam consoante o telemóvel em questão, devido às diferentes peças e à acessibilidade ao interior do telemóvel.<br>
