--- a/Projeto/public/www/index.html
+++ b/Projeto/public/www/index.html
@@ -41,8 +41,6 @@
                 </center>
             </div>
 
-          
-
             <div id="formLogin" class="formLogin" style="display:none">
                 <h2>Login</h2>
                 <div class="closeForm" onclick="closeForm()">&times;</div>
@@ -121,8 +119,7 @@
             </center>
             <br>
             <div class="row">
-                <img src="images/bananaphonegif2.gif" alt="bananaphone" height="max-width:50%; height:auto;">
-                <div class="columnright imagebox2">
+                <div class="imagebox2">
                     <h4><b>Reparação e Formatação</b></h4>
                     <p>Os preços de reparações variam consoante o telemóvel em questão, devido às diferentes peças e à
                         acessibilidade ao interior do telemóvel.<br>
