Kinda bom mas caralho quero me matar

--- a/Projeto/public/www/index.html
+++ b/Projeto/public/www/index.html
@@ -329,12 +329,12 @@
                 Monkey Land
             </address>
         </div>
-        <!--
-            <footer>
-                <div class="footer">
-                    <p>Social media</p>
-                </div>
-            </footer> -->
+        <footer>
+            <div class="footer">
+                <br>
+                <p>Copyright © 2023 Monkey, Inc.</p>
+            </div>
+        </footer>
     </div>
 </body>
 
