--- a/Projeto/public/www/index.html
+++ b/Projeto/public/www/index.html
@@ -16,6 +16,9 @@
 </head>
 
 <body>
+    <button id="btnapi" onclick="api()">
+        Mostrar Frase de API
+    </button>
     <nav>
         <div class="topnav" id="topnav">
             <a href="#home">Home</a>
