Valores carrinho fixed and btnapi css

--- a/Projeto/public/www/index.html
+++ b/Projeto/public/www/index.html
@@ -16,9 +16,6 @@
 </head>
 
 <body>
-    <button id="btnapi" onclick="api()">
-        Mostrar Frase de API
-    </button>
     <nav>
         <div class="topnav" id="topnav">
             <a href="#home">Home</a>
@@ -92,7 +89,12 @@
                     <button id="checkout-button" disabled>Checkout</button>
                 </div>
             </div>
-
+            <center>
+                <button id="btnapi"  onclick="api()">
+                    Casos positivos de Covid em Portugal
+                </button>
+            </center>
+            
         </header>
 
         <div id="servicos" class="w3-justify w3-padding-64">
