--- a/Projeto/public/www/index.html
+++ b/Projeto/public/www/index.html
@@ -93,6 +93,10 @@
                 <button id="btnapi"  onclick="api()">
                     Casos positivos de Covid em Portugal
                 </button>
+
+                <div id="divListar">
+                    <h3 id="casosCovid"></h3>
+                </div>
             </center>
             
         </header>
@@ -102,6 +106,8 @@
             <center>
                 <h1><b>Serviços</b></h1>
             </center>
+            
+
 
             <div class="prodbar" id="prodbar">
                 <button id="procurar" class="procurar" onclick="procurarServico()">Procurar</button>
