--- a/Projeto/public/www/index.html
+++ b/Projeto/public/www/index.html
@@ -109,16 +109,16 @@
             
 
 
-            <div class="prodbar" id="prodbar">
-                <button id="procurar" class="procurar" onclick="procurarServico()">Procurar</button>
-                <button id="inserir" class="inserir" onclick="inserirServico()">Inserir</button>
-                <button id="eliminar" class="eliminar" onclick="eliminarServico()">Eliminar</button>
+            <div class="servbar" id="servbar">
+                <button id="procurarS" class="procurarS" onclick="procurarServico()">Procurar</button>
+                <button id="inserirS" class="inserirS" onclick="inserirServico()">Inserir</button>
+                <button id="eliminarS" class="eliminarS" onclick="eliminarServico()">Eliminar</button>
             </div>
             <br><br>
             
             <div id="servList" class="row">
                 <div class="columnleft imagebox2">
-                    <h3 id="service1-name">Reparação de telemóvel</h3>
+                    <h3 id="service1-name"><b>Reparação de telemóvel</b></h3>
                     <br>
                     <div class="zoom">
                         <img src="images/monkereparing.jpg" style="max-width:100%; height:auto;">
@@ -129,7 +129,7 @@
                 </div>
 
                 <div class="columnleft imagebox2">
-                    <h3 id="service2-name">Formatação de telemóvel</h3>
+                    <h3 id="service2-name"><b>Formatação de telemóvel</b></h3>
                     <br>
                     <div class="zoom">
                         <img src="images/monkeyMad.png" style="max-width:80%; height:auto;">
