--- a/Projeto/public/www/index.html
+++ b/Projeto/public/www/index.html
@@ -42,9 +42,7 @@
                         telemóveis e disponibilizar serviços para os mesmos. <br>
                         Abaixo irá encontrar os nossos serviços, um bocado sobre a nossa equipa de desenvolvimento e
                         ainda uma secção de suporte! <br>
-                        Caso queira visualizar os produtos disponíveis, tem de se <a onclick="showFormRegistar()"
-                            style="cursor: pointer;"><b><u>registar</u></b></a> e posteriormente dar <a
-                            onclick="showFormLogin()" style="cursor: pointer;"><b><u>login</u></b></a>!</p>
+                        Caso queira visualizar os produtos disponíveis, tem de se <b><u>registar</u></b> e posteriormente dar <b><u>login</u></b>!</p>
                     <p><b>A equipa do Monkey Business deseja-se uma boa estadia!</b></p>
                 </center>
 
