--- a/Projeto/public/www/index.html
+++ b/Projeto/public/www/index.html
@@ -289,7 +289,7 @@
                 <div class="column">
                     <p><b>Nome: </b>André Santos<br>
                         <b>Nº de aluno:</b>30007679<br>
-                        <b>Localidade:</b><br>
+                        <b>Localidade:</b> Cacém<br>
                         <b>Cargo: </b>Desenvolvedor Backend/Frontend
                     </p>
                 </div>
@@ -318,11 +318,12 @@
                 1950-011, Monkey City<br>
                 Monkey Land
             </address>
+            <hr class="style-one">
         </div>
     </div>
     <footer>
         <div class="footer">
-            <p>Copyright © 2023 Monkey, Inc.</p>
+            <p>Copyright © 2023 Monkey Business, Inc.</p>
         </div>
     </footer>
 </body>
