--- a/Projeto/public/www/index.html
+++ b/Projeto/public/www/index.html
@@ -43,7 +43,7 @@
                         Abaixo irá encontrar os nossos serviços, um bocado sobre a nossa equipa de desenvolvimento e
                         ainda uma secção de suporte! <br>
                         Caso queira visualizar os produtos disponíveis, tem de se <b><u>registar</u></b> e posteriormente dar <b><u>login</u></b>!</p>
-                    <p><b>A equipa do Monkey Business deseja-se uma boa estadia!</b></p>
+                    <p><b>A equipa do Monkey Business deseja-lhe uma boa estadia!</b></p>
                 </center>
 
             </div>
